@@ -7,6 +7,8 @@ PHP 4                                                                      NEWS
 - Fixed bug #24977 (Revert mysql_select_db optimization). (Ilia)
 - Fixed bug #24909 (Bad random numbers with ZTS builds on Solaris). (Ilia)
 - Fixed bug #24951 (ob_flush() needlessly destroys output handler). (Ilia)
+- Fixed bug #24897 (inconsistent behavior of shuffle() & array_multisort()).
+  (Ilia, Jani)
 - Fixed bug #24792 (--enable-zend-multibyte causes random segfaults with ZTS).
   (fujimoto)
 - Fixed bug #24142 (workaround for a gcc bug affecting round()). (Marcus, Ilia)
